added certificate data

--- a/src/app/dashboard-feature/cv-template/cv-template.component.scss
+++ b/src/app/dashboard-feature/cv-template/cv-template.component.scss
@@ -1,5 +1,5 @@
 .cv {
-   background-image: url("../../../assets/cv-themplate.svg");
+   background-image: url("/../../../assets/cv-themplate.svg");
    background-repeat: repeat-y;
    background-size: cover ;
  }
