--- a/src/app/delete-modal/delete-modal.component.html
+++ b/src/app/delete-modal/delete-modal.component.html
@@ -15,9 +15,9 @@
           <fa-icon class="text-red-700" transform="grow-10" [icon]="faTriangleExclamation"></fa-icon>
         </div>
         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-          <h3 class="text-lg leading-6 font-medium text-gray-900">Remove this Education?</h3>
+          <h3 class="text-lg leading-6 font-medium text-gray-900">Remove {{item}}?</h3>
           <div class="mt-2">
-            <p class="text-sm text-gray-500">Are you sure you want to remove this Education from your educations?</p>
+            <p class="text-sm text-gray-500">Are you sure you want to remove {{item}} from your {{category}}?</p>
             <p class="text-sm text-gray-500 font-bold">this action cannot be undone!</p>
           </div>
         </div>
