added skill data and form

--- a/src/app/language-feature/language-form/language-form.component.html
+++ b/src/app/language-feature/language-form/language-form.component.html
@@ -42,7 +42,7 @@
           </div>
 
           <div class="sm:col-span-3 mt-4">
-            <label for="reading" class="block text-sm font-medium text-white">Reading</label>
+            <label for="reading" class="block text-sm font-medium text-white">Writing</label>
             <div class="mt-1">
               <select placeholder="level of writing"
                       required type="text" name="writing" id="writing" formControlName="writing" class="max-w-lg block focus:ring-indigo-500 focus:border-indigo-500 w-full shadow-sm sm:max-w-xs sm:text-sm border-gray-300 rounded-md">
@@ -61,7 +61,7 @@
           </div>
 
           <div class="sm:col-span-3 mt-4">
-            <label for="reading" class="block text-sm font-medium text-white">Reading</label>
+            <label for="reading" class="block text-sm font-medium text-white">Speaking</label>
             <div class="mt-1">
               <select placeholder="level of speaking"
                       required type="text" name="speaking" id="speaking" formControlName="speaking" class="max-w-lg block focus:ring-indigo-500 focus:border-indigo-500 w-full shadow-sm sm:max-w-xs sm:text-sm border-gray-300 rounded-md">
